# lifecycle-mcp

./: .bandit  .dxtignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  GITHUB_SYNC_SCRIPT.md  Makefile  README.md  USAGE_EXAMPLES.md  build_dxt.py  lifecycle-add.sh  lifecycle-config.example.json  lifecycle.db-shm  lifecycle.db-wal  pyproject.toml  pytest.ini  server.py  setup-github.sh  sync-github-relationships.sh  sync_github_relationships.py  test_github_integration.py  test_sub_issue.py  tox.ini  windows_compatibility_analysis.md
.claude/commands/: evaluate-tests.md
.github/workflows/: debug.yml  test-windows-minimal.yml  test-windows.yml  test.yml  windows-debug.yml  windows-diagnostic.yml  (+2 more)
lifecycle-mcp-extension/: lifecycle-mcp-1.0.0.dxt  manifest.json  pyproject.toml  setup.py
lifecycle-mcp-extension/src/lifecycle_mcp/: decomposition-schema-extension.sql  github_utils.py  llm_decomposition_prompts.py  llm_question_generator.py  migrations.py  server.py
lifecycle-mcp-extension/src/lifecycle_mcp/handlers/: __init__.py  architecture_handler.py  export_handler.py  interview_handler.py  requirement_handler.py
tests/: README_REFACTORING.md  __init__.py  conftest.py  test_above_fold_formatting.py  test_architecture_handler.py  test_database_manager.py  test_export_handler.py  test_integration.py  test_interview_handler.py  test_performance_benchmarks.py  test_property_based.py  test_requirement_handler.py  test_simple.py  test_status_handler.py  test_task_handler.py  test_task_handler_refactored.py  test_windows_debug.py
(+18 files in other folders)
